--extra-arg=-I${flextool_outdir}

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -393,6 +393,7 @@ add_custom_command(
           --extra-arg=-I${chromium_build_util_headers}
           --extra-arg=-I${basis_headers}
           --extra-arg=-I${flexlib_headers}
+          --extra-arg=-I${flextool_outdir}
           --extra-arg=-Wno-undefined-inline
           ${flextool_extra_args}
           ${flextool_input_files}
