--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -587,5 +587,5 @@ add_custom_command(
 include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/Exports.cmake)
 
 if(ENABLE_TESTS)
-  add_subdirectory( tests )
+  add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/tests )
 endif()
